<resources>
    <string name="app_name">Ibile Maps</string>
    <string name="cd_drawer_btn">drawer button</string>
    <string name="cd_browse_markers_btn">browse markers button</string>
    <string name="cd_organize_markers_button">organize markers button</string>
    <string name="cd_search_location_btn">search location button</string>
    <string name="cd_share_button">share button</string>
    <string name="cd_my_location_button">my location button</string>
    <string name="cd_back_btn">action bar  back button</string>
    <string name="cd_add_marker_button">add marker button</string>
    <string name="text_btn_cancel">Cancel</string>
    <string name="text_btn_ok">OK</string>
    <string name="text_place_single_marker">Move the map around to place your marker where you want and click OK to place it</string>
    <string name="cd_add_new_marker_dummy">add new marker dummy</string>
    <string name="cd_add_new_marker_target">add new marker target</string>
    <string name="fmt_add_marker_coords">Lat: %1$s\nLng: %2$s</string>
    <string name="cd_btn_edit_marker">edit marker button</string>
    <string name="cd_btn_copy_marker_details">copy marker details button</string>
    <string name="cd_btn_navigate_marker">navigate marker button</string>
    <string name="cd_btn_call_marker">call marker phone number</string>
    <string name="text_btn_create">Create</string>
    <string name="cd_image_powered_by_google">powered by google attribution</string>
    <string name="text_title_new_marker">New Marker</string>
    <string name="text_location_retrieval_error">An error occurred while retrieving location</string>
    <string name="hint_et_search">Search</string>
    <string name="text_generic_async_error_msg">An error occurred, check your connectivity or contact us if error persists</string>
    <string name="text_searching">Searching…</string>
    <string name="text_polyline_marker_instruction">Move the map around to place the points, click \'+\' to add a point, click \'-\' to remove a point and switch points with previous/next buttons. Finally click save to save the shape.</string>
    <string name="cd_btn_add_polyline_marker">add polyline marker button</string>
    <string name="fmt_polyline_marker_distance">Distance: %1$s</string>
    <string name="fmt_polygon_marker_area">Perimeter: %1$s Km\nArea: %2$s</string>
    <string name="text_marker_folder_title_default_folder">Default folder</string>
    <string name="text_edit_title_label">Title</string>
    <string name="text_edit_description_label">Description</string>
    <string name="fmt_marker_longitude">Longitude: \t %1$s</string>
    <string name="fmt_marker_latitude">Latitude: \t %1$s</string>
    <string name="text_extra_information_label">Extra information</string>
    <string name="text_insert_label">Insert…</string>
    <string name="text_creation_date_label">Creation date</string>
    <string name="label_gps_coordinates">GPS coordinates</string>
    <string name="label_marker_phone_number">Phone number</string>
    <string name="label_icon_color">Icon and color</string>
    <string name="text_ok">OK</string>
    <string name="title_edit_phone_number">Edit phone number</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_btn_dial_number">Dial phone number</string>
    <string name="text_text_phone_number">Text phone number</string>
    <string name="text_call_phone_number">Call phone number</string>
    <string name="text_empty_marker_number">No phone number is defined for that marker</string>
    <string name="label_choose_images">Images</string>
    <string name="text_add_images">Add Images</string>
    <string name="edit_marker_exit_dialog_message">You have unsaved modifications, do you want to save them?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_toast_marker_details_copied">Marker details copied to clipboard</string>
    <string name="text_toast_marker_coordinates_copied">Coordinates copied to clipboard</string>
    <string name="text_share_images">Share images</string>
    <string name="text_add_folder">Add folder</string>
    <string name="text_folder_name">Folder name</string>
    <string name="text_all">All</string>
    <string name="text_title_folder_icon_color">Folder Icon and Color:</string>
    <string name="text_modify_folder">Modify folder</string>
    <string name="text_dialog_delete_folder_message">Are you sure you want to delete this folder? All markers associated to this folder will be deleted permanently!</string>
    <string name="text_save">Save</string>
    <string name="fmt_folder_markers_count">%1$s markers</string>
    <string name="text_organize_markers_field_actions_options_msg">Pick the fields you want to apply to moved POIs</string>
    <string name="text_sign_in">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_continue">continue</string>
    <string name="text_create_an_account">create an account</string>
    <string name="text_or">or</string>
    <string name="text_sign_up_with_google">sign up with google</string>
    <string name="text_sign_in_with_google">sign in with google</string>
    <string name="text_create_account">create account</string>
    <string name="subscription_active_title">Your subscription was successful</string>
    <string name="subscription_active_msg">You can now continue to use Ibile Maps</string>
    <string name="subscription_inactive_msg_title">You do not have an active subscription</string>
    <string name="subscription_inactive_msg">An active subscription is required to use Ibile Maps. Please subscribe to one of the plans below to continue.</string>
    <string name="subscription_inactive_free_trial_msg">You are eligible for 7 days free trial! Select one of the plans below to start enjoying your free trial. Billing would begin at the end of the trial period.</string>
    <string name="text_imported_marker">Imported marker</string>
    <string name="dialog_message_confirm_import">Do you want to import the contents of this file?</string>
    <string name="toast_msg_data_import_started">Data import in progress…</string>
    <string name="title_dialog_file_options">File options</string>
    <string name="title_dialog_map_file_rename">Enter new name</string>
    <string name="title_dialog_create_new_map_file">Enter the new map\'s name</string>
    <string name="msg_dialog_confirm_delete_map_file">This action will delete the map file from your device forever. All the marker inside that file will be lost. Are you sure?</string>
    <string name="msg_dialog_delete_map_file_success">Map file deleted successfully</string>
    <string name="forget_password">Forget password?</string>
</resources>
