<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_inactive_subscription_msg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscription_inactive_msg_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_inactive_subscription_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_2"
        android:text="@string/subscription_inactive_msg"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_inactive_subscription_msg_title" />

    <TextView
        android:id="@+id/tv_free_trial_eligibility_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_2"
        android:text="@string/subscription_inactive_free_trial_msg"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tv_inactive_subscription_msg" />

    <ViewStub
        android:id="@+id/subscriptions_skus_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_2"
        android:inflatedId="@id/subscriptions_skus_list"
        app:layout_constraintTop_toBottomOf="@id/tv_free_trial_eligibility_text" />

</androidx.constraintlayout.widget.ConstraintLayout>

