<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_call_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:drawableStart="@drawable/ic_call_24"
            android:drawablePadding="@dimen/spacing_1"
            android:paddingStart="@dimen/spacing_1"
            android:paddingEnd="@dimen/spacing_1"
            android:text="@string/text_call_phone_number"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/btn_call_phone_number" />

        <Button
            android:id="@+id/btn_dial_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:drawableStart="@drawable/ic_dialpad_24"
            android:drawablePadding="@dimen/spacing_1"
            android:paddingStart="@dimen/spacing_1"
            android:paddingEnd="@dimen/spacing_1"
            android:text="@string/text_btn_dial_number"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider" />

        <View
            android:id="@+id/view_divider_2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/btn_dial_phone_number" />

        <Button
            android:id="@+id/btn_text_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:drawableStart="@drawable/ic_textsms_24"
            android:drawablePadding="@dimen/spacing_1"
            android:paddingStart="@dimen/spacing_1"
            android:paddingEnd="@dimen/spacing_1"
            android:text="@string/text_text_phone_number"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider_2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>